Add tests for 16 and 32 bits

--- a/src/doom/tests/CMakeLists.txt
+++ b/src/doom/tests/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(doom_tests
         main.cpp catch.hpp
-        savegame_test.cpp
+        savegame_test_8bit.cpp
+        savegame_test_16_bit.cpp
+        savegame_test_32_bit.cpp
         file_stream.hpp
 )
 
