--- a/src/doom/savegame/CMakeLists.txt
+++ b/src/doom/savegame/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(doom_cxx_savegame
         savegame.cpp savegame.hpp
         extra_savegame.cpp
+        open_mode.hpp
         )
 
 target_include_directories(doom_cxx_savegame PRIVATE ".." "../.." "${CMAKE_CURRENT_BINARY_DIR}/../../..")
